--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bcrypt": "^5.1.1",
     "class-validator": "^0.14.1",
     "mysql2": "^3.11.3",
+    "nestjs-paginate": "^9.3.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20"
